# URoot-964

./: .gitignore  NetSpeedFIlesSupport.jsx  README.md  capacitor.config.json  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: build.yml  pages.yml  release.yml
android/app/: build.gradle
android/app/src/main/java/com/montecristovault/app/: MainActivity.java
android/app/src/main/res/values/: strings.xml
src/: App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
